--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-18  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* w32font.c (Qsymbol): Remove local definition.
+	(syms_of_w32font): Don't DEFSYM it.
+
 2012-07-18  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	Fix sweep_vectors to handle large bool vectors correctly.
