--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-07-18  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* lisp.h (last_undo_boundary): Declare new var.
+	* keyboard.c (command_loop_1): Set it.
+	* cmds.c (Fself_insert_command): Use it to only remove boundaries that
+	were auto-added by the command loop (bug#11774).
+
 2012-07-18  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* w32font.c (Qsymbol): Remove local definition.
