* lisp/progmodes/sh-script.el (sh-imenu-generic-expression): Capture a function with `function' keyword and without parentheses like "function FOO".

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-07-18  Masatake YAMATO  <yamato@redhat.com>
+
+	* progmodes/sh-script.el (sh-imenu-generic-expression):
+	Capture a function with `function' keyword and without parentheses
+	like "function FOO" (bug#11856).
+
 2012-07-18  Tassilo Horn  <tassilo@member.fsf.org>
 
 	* window.el (split-window-sensibly): Make WINDOW argument
@@ -51,9 +57,10 @@
 	* descr-text.el (describe-char): Fix format args.  (Bug#10129)
 
 2012-07-17  Fabián Ezequiel Gallina  <fgallina@cuca>
+
 	Final renames and doc fixes for movement commands (bug#11899).
-	* progmodes/python.el (python-nav-beginning-of-statement): Rename
-	from python-nav-statement-start.
+	* progmodes/python.el (python-nav-beginning-of-statement):
+	Rename from python-nav-statement-start.
 	(python-nav-end-of-statement): Rename from
 	python-nav-statement-end.
 	(python-nav-beginning-of-block): Rename from
@@ -62,8 +69,8 @@
 
 2012-07-17  Fabián Ezequiel Gallina  <fgallina@cuca>
 
-	* progmodes/python.el (python-shell-send-string-no-output): Allow
-	accept-process-output to quit, keeping shell process ready for
+	* progmodes/python.el (python-shell-send-string-no-output):
+	Allow accept-process-output to quit, keeping shell process ready for
 	future interactions (Bug#11868).
 
 2012-07-17  Stefan Monnier  <monnier@iro.umontreal.ca>
