--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,7 @@
 2012-07-18  Chong Yidong  <cyd@gnu.org>
 
+	* bindings.el: Bind M-= to count-words.
+
 	* faces.el (face-spec-reset-face): Handle reverse video (Bug#4238).
 
 2012-07-18  Masatake YAMATO  <yamato@redhat.com>
