--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,7 @@
 2012-07-18  Chong Yidong  <cyd@gnu.org>
 
+	* simple.el (count-words): Report on narrowing (Bug#9959).
+
 	* bindings.el: Bind M-= to count-words.
 
 	* faces.el (face-spec-reset-face): Handle reverse video (Bug#4238).
