--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,11 @@
+2012-07-18  Andreas Schwab  <schwab@linux-m68k.org>
+
+	Fix bug that created negative-length intervals.
+	* intervals.c (merge_interval_right, merge_interval_left):
+	Do not zero out this interval if it is absorbed by its children,
+	as this interval's total length doesn't change in that case.  See
+	<http://lists.gnu.org/archive/html/emacs-devel/2012-07/msg00403.html>.
+
 2012-07-18  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* alloc.c (Fmake_bool_vector): Fix off-by-8 bug
