--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-07-19  Chong Yidong  <cyd@gnu.org>
+
+	* window.c (Fwindow_absolute_pixel_edges)
+	(Fdelete_other_windows_internal): Signal an error if the window is
+	on a dead frame (Bug#11984).
+
 2012-07-14  Eli Zaretskii  <eliz@gnu.org>
 
 	Remove FILE_SYSTEM_CASE.
