Simple wrapper for make_unibyte_string, adjust font_open_by_name. * src/lisp.h (build_unibyte_string): New function. * src/dosfns.c, src/fileio.c, src/fns.c, src/ftfont.c, src/process.c: * src/sysdep.c, src/w32fns.c, src/xfns.c: Use it. * src/font.c (font_open_by_name): Change 2nd and 3rd args to the only arg of type Lisp_Object to avoid redundant calls to make_unibyte_string. Adjust users accordingly. * src/font.h (font_open_by_name): Adjust prototype. * admin/coccinelle/unibyte_string.cocci: Semantic patch to convert from make_unibyte_string to build_unibyte_string where appropriate.

--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-20  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* coccinelle/unibyte_string.cocci: Semantic patch to convert from
+	make_unibyte_string to build_unibyte_string where appropriate.
+
 2012-07-17  Eli Zaretskii  <eliz@gnu.org>
 
 	* CPP-DEFINES: Remove FILE_SYSTEM_CASE.
@@ -5,6 +10,7 @@
 2012-07-17  Chong Yidong  <cyd@gnu.org>
 
 	* Version 24.1 released.
+
 2012-07-11  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Assume mkdir, perror, rename, rmdir, strerror.
