Fix display of Hebrew tutorial title on splash screen.
 lisp/startup.el (fancy-startup-text): Read the whole tutorial, not
 just its first 256 bytes.  Prevents gibberish in display of the
 tutorial title.
 etc/tutorials/TUTORIAL.he: Make the first sentence display correctly
 in a left-to-right paragraph, such as what is shown on the fancy
 splash screen, by using directional control characters.

--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,9 @@
+2012-07-20  Eli Zaretskii  <eliz@gnu.org>
+
+	* tutorials/TUTORIAL.he: Make the first sentence display correctly
+	in a left-to-right paragraph, such as what is shown on the fancy
+	splash screen.
+
 2012-07-15  Leo Liu  <sdl.web@gmail.com>
 
 	* NEWS: Mention exclamation-mark and flymake.
