--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-20  Dmitry Gutov  <dgutov@yandex.ru>
+
+	* progmodes/ruby-mode.el (ruby-parse-partial): No error when end
+	up inside string symbol literal (bug#11923).
+
 2012-07-20  Eli Zaretskii  <eliz@gnu.org>
 
 	* startup.el (fancy-startup-text): Read the whole tutorial, not
