--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-20  Dmitry Gutov  <dgutov@yandex.ru>
+
+	* automated/ruby-mode-tests.el: New file with one test.
+
 2012-07-17  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* indent/shell.sh: Add test case for ${#VAR}.
