--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-20  Leo Liu  <sdl.web@gmail.com>
+
+	* progmodes/cc-langs.el (c-symbol-start): Include char _ (bug#11986).
+
 2012-07-18  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* userlock.el, emacs-lisp/map-ynp.el: Declare part of `emacs' package.
