--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -11,6 +11,11 @@
 	* progmodes/cperl-mode.el (cperl-unwind-to-safe): Don't inf-loop at end
 	of narrowed buffer (bug#11966).
 
+2012-07-14  Jan Djärv  <jan.h.d@swipnet.se>
+
+	* progmodes/cc-cmds.el (c-defun-name): Recognize Objective-C methods
+	also (Bug#7879).
+
 2012-07-09  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* progmodes/sh-script.el (sh-syntax-propertize-function): Fix last
