--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-20  Vincent Belaïche  <vincentb1@users.sourceforge.net>
+
+	* ses.el (ses-rename-cell): Set new name also in reference list of
+	cells of which the renamed cell depends.
+
 2012-07-20  Masatake YAMATO  <yamato@redhat.com>
 
 	* term/x-win.el (x-menu-bar-open): Use `frame-parameter'
