--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,8 @@
 2012-07-20  Leo Liu  <sdl.web@gmail.com>
 
+	* progmodes/cc-cmds.el (c-defun-name): Handle objc selectors properly.
+	(Bug#7879)
+
 	* progmodes/cc-langs.el (c-symbol-start): Include char _ (bug#11986).
 
 2012-07-18  Stefan Monnier  <monnier@iro.umontreal.ca>
