--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-07-21  Leo Liu  <sdl.web@gmail.com>
+
+	* progmodes/cc-cmds.el (c-defun-name): Use
+	match-string-no-properties instead for consistency.
+
 2012-07-20  Leo Liu  <sdl.web@gmail.com>
 
 	* progmodes/cc-cmds.el (c-defun-name): Handle objc selectors properly.
