--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-21  Jan Djärv  <jan.h.d@swipnet.se>
+
+	* nsterm.m (accessibilityAttributeValue): New function. (Bug#11134).
+
 2012-07-21  Chong Yidong  <cyd@gnu.org>
 
 	* window.c (decode_any_window): Signal an error if the window is
